--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon bin/www.ts",
     "test": "jest"
   },
   "dependencies": {
@@ -13,10 +13,15 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.22",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
     "superagent": "^6.1.0",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
