--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "superagent": "^6.1.0",
