Prepare build of the project to be used on live

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "nodemon bin/www.ts",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc --project ./"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
