--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^26.0.20",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
+    "@types/supertest": "^2.0.10",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
