--- a/.gitignore
+++ b/.gitignore
@@ -145,7 +145,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+dist/Release
 
 # Dependency directories
 node_modules/
@@ -190,10 +190,10 @@ typings/
 .cache
 .parcel-cache
 
-# Next.js build output
+# Next.js dist output
 .next
 
-# Nuxt.js build / generate output
+# Nuxt.js dist / generate output
 .nuxt
 dist
 
@@ -203,7 +203,7 @@ dist
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
-# vuepress build output
+# vuepress dist output
 .vuepress/dist
 
 # Serverless directories
