--- a/.gitignore
+++ b/.gitignore
@@ -215,7 +215,7 @@ dist
 # DynamoDB Local files
 .dynamodb/
 
-# TernJS port file
+# TernJS localPort file
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
